lee y almacena correctamente los datos en los arrays

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "gitlens.graph.dimMergeCommits": false,
     "gitlens.graph.highlightRowsOnRefHover": true,
-    "gitlens.graph.showRemoteNames": false
+    "gitlens.graph.showRemoteNames": false,
+    "java.debug.settings.onBuildFailureProceed": true
 }
